# StrEasy

./: CMakeLists.txt  main.cpp  str_easy.h
