cmake_minimum_required(VERSION 3.25)
project(StrEasy)

set(CMAKE_CXX_STANDARD 17)

add_executable(StrEasy main.cpp files/str_easy.h files/1_itc_hello_str.cpp files/2_itc_len.cpp files/3_itc_print_copy_str.cpp files/4_itc_first_end_three.cpp files/5_itc_count_char_in_str.cpp files/6_itc_even_place.cpp files/7_itc_percent_lower_uppercase.cpp files/8_itc_reverse_str.cpp)
